[package]
name = "particle-behaviour"
version = "0.2.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
particle-protocol = { path = "../particle-protocol"}
particle-actors = { path = "../particle-actors"}
particle-dht = { path = "../particle-dht"}
particle-services = { path = "../particle-services"}
particle-closures = { path = "../particle-closures"}
particle-modules = { path = "../particle-modules"}
particle-providers = { path = "../particle-providers"}

config-utils = { path = "../crates/config-utils" }
trust-graph = { path = "../trust-graph" }
fluence-libp2p = { path = "../crates/libp2p" }
waiting-queues = { path = "../crates/waiting-queues" }
host-closure = { path = "../crates/host-closure" }
server-config = { path = "../crates/server-config" }

libp2p = { package = "fluence-fork-libp2p", version = "0.34.0" }
prometheus = "0.9.0"
log = "0.4.11"
futures = "0.3.5"
serde_json = "1.0.57"
serde = "1.0.117"
bs58 = "0.3.1"
anyhow = "1.0.34"

[dev-dependencies]
async-std = { version = "1.6.5", features = ["unstable"] }
rand = "0.7.3"
