[package]
name = "particle-builtins"
version = "0.2.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }
particle-execution = { workspace = true }
particle-services = { workspace = true }
particle-modules = { workspace = true }
connection-pool = { workspace = true }

server-config = { workspace = true }
kademlia = { workspace = true }
particle-args = { workspace = true }
ivalue-utils = { workspace = true }
now-millis = { workspace = true }
toml-utils = { workspace = true }
peer-metrics = { workspace = true }
uuid-utils = { workspace = true }
workers = { workspace = true }
service-modules = { workspace = true }
subnet-resolver = { workspace = true }

libp2p = { workspace = true }
libp2p-kad = { workspace = true }
avm-server = { workspace = true }
multihash = { workspace = true, features = ["serde-codec"] }
fluence-keypair = { workspace = true }


tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
bs58 = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
humantime-serde = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
bytesize = "1.3.0"
derivative = { workspace = true }
fluence-app-service = { workspace = true }
async-trait = { version = "0.1.74" }
eyre = { workspace = true }
base64 = { workspace = true }
health = { workspace = true }

[dev-dependencies]
proptest = "1.4.0"
tempfile = { workspace = true }
