[package]
name = "particle-closures"
version = "0.2.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
particle-protocol = { path = "../particle-protocol"}
particle-providers = { path = "../particle-providers"}
particle-services = { path = "../particle-services"}
particle-modules = { path = "../particle-modules"}
connection-pool = { path = "../connection-pool"}

kademlia = { path = "../crates/kademlia"}
config-utils = { path = "../crates/config-utils" }
host-closure = { path = "../crates/host-closure" }
ivalue-utils = { path = "../crates/ivalue-utils" }
json-utils = { path = "../crates/json-utils" }
trust-graph = { path = "../trust-graph" }
fluence-libp2p = { path = "../crates/libp2p" }
waiting-queues = { path = "../crates/waiting-queues" }

libp2p = { package = "fluence-fork-libp2p", version = "0.34.0" }

async-std = "1.9.0"
multihash = "0.13.2"
futures = "0.3.5"
serde_json = "1.0.61"
serde = "1.0.118"
log = "0.4.11"
bs58 = "0.3.1"
ref-cast = "1.0.2"
parking_lot = "0.11.1"
