[package]
name = "particle-closures"
version = "0.2.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
particle-protocol = { path = "../particle-protocol"}
particle-providers = { path = "../particle-providers"}
particle-services = { path = "../particle-services"}
particle-modules = { path = "../particle-modules"}
connection-pool = { path = "../connection-pool"}
script-storage = { path = "../script-storage"}

server-config = { path = "../crates/server-config"}
kademlia = { path = "../crates/kademlia"}
config-utils = { path = "../crates/config-utils" }
host-closure = { path = "../crates/host-closure" }
ivalue-utils = { path = "../crates/ivalue-utils" }
json-utils = { path = "../crates/json-utils" }
fluence-libp2p = { path = "../crates/libp2p" }
waiting-queues = { path = "../crates/waiting-queues" }
async-unlock = { path = "../crates/async-unlock" }

trust-graph = "0.2.0"
libp2p = { package = "fluence-fork-libp2p", version = "0.34.0" }

async-std = { version = "1.9.0", features = ["unstable"] }
multihash = "0.13.2"
futures = "0.3.5"
serde_json = "1.0.61"
serde = "1.0.118"
log = "0.4.11"
bs58 = "0.3.1"
ref-cast = "1.0.2"
parking_lot = "0.11.1"
uuid = "0.8.2"
chrono = "0.4.19"
thiserror = "1.0.23"
