[package]
name = "particle-closures"
version = "0.2.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
particle-protocol = { path = "../particle-protocol"}
particle-services = { path = "../particle-services"}
particle-modules = { path = "../particle-modules"}
connection-pool = { path = "../connection-pool"}
script-storage = { path = "../script-storage"}

server-config = { path = "../crates/server-config"}
kademlia = { path = "../crates/kademlia"}
host-closure = { path = "../crates/host-closure" }
ivalue-utils = { path = "../crates/ivalue-utils" }
now-millis = { path = "../crates/now-millis" }
toml-utils = { path = "../crates/toml-utils" }

libp2p = { version = "0.36.2", package = "fluence-fork-libp2p", features = ["tcp-tokio"] }

async-std = { version = "1.9.0", features = ["unstable"] }
multihash = "0.13.2"
serde_json = "1.0.64"
serde = "1.0.130"
log = "0.4.11"
bs58 = "0.3.1"
parking_lot = "0.11.1"
thiserror = "1.0.23"
humantime-serde = "1.0.1"
rand = "0.8.4"
