[package]
name = "particle-dht"
version = "0.0.1"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
libp2p = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "master" }
trust-graph = { path = "../trust-graph" }
once_cell = "1.4.1"
prost = "0.6.1"
smallvec = "1.4.2"
serde_json = "1.0.57"
log = "0.4.11"
bs58 = "0.3.1"
prometheus = "0.9.0"