[package]
name = "particle-dht"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
particle-protocol = { path = "../particle-protocol" }

trust-graph = { path = "../trust-graph" }
control-macro = { path = "../crates/control-macro" }
waiting-queues = { path = "../crates/waiting-queues" }
fluence-libp2p = { path = "../crates/libp2p" }
server-config = { path = "../crates/server-config" }

libp2p = { package = "fluence-fork-libp2p", version = "0.22.0" }

once_cell = "1.4.1"
prost = "0.6.1"
smallvec = "1.4.2"
serde_json = "1.0.57"
log = "0.4.11"
bs58 = "0.3.1"
prometheus = "0.9.0"
futures = "0.3.5"
