[package]
name = "particle-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }

particle-args = { workspace = true }
fluence-libp2p = { workspace = true }
fs-utils = { workspace = true }
json-utils = { workspace = true }

thiserror = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
async-std = { workspace = true }
