[package]
name = "particle-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }

particle-args = { workspace = true }
fluence-libp2p = { workspace = true }
fs-utils = { workspace = true }
json-utils = { workspace = true }
fluence-app-service = { workspace = true }

thiserror = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }
parking_lot = { workspace = true }
async-trait = { version = "0.1.72"}
