[package]
name = "particle-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }
types = { workspace = true }

particle-args = { workspace = true }
fluence-libp2p = { workspace = true }
fs-utils = { workspace = true }
json-utils = { workspace = true }
fluence-app-service = { workspace = true }

thiserror = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }

tokio = { workspace = true, features = ["fs"] }
parking_lot = { workspace = true }
async-trait = { workspace = true }
eyre = { workspace = true }