[package]
name = "particle-modules"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-execution = { workspace = true }

particle-args = { workspace = true }
json-utils = { workspace = true }
fs-utils = { workspace = true }
service-modules = { workspace = true }

marine-it-parser = "0.11.1"
fluence-app-service = { workspace = true }
marine-utils = "0.4.0"

serde = { version = "1.0.145", features = ["derive"] }
serde_json = { workspace = true }
toml = "0.5.10"
log = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
eyre = { workspace = true }
fstrings = { workspace = true }
bytesize = "1.1.0"

[dev-dependencies]
tempdir = "0.3.7"
server-config = { workspace = true }
