[package]
name = "particle-modules"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-execution = { workspace = true }

particle-args = { workspace = true }
json-utils = { workspace = true }
fs-utils = { workspace = true }
service-modules = { workspace = true }

marine-it-parser = { workspace = true }
fluence-app-service = { workspace = true }
marine-utils = { workspace = true }

serde = { version = "1.0.183", features = ["derive"] }
serde_json = { workspace = true }
toml = "0.5.10"
log = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
eyre = { workspace = true }
fstrings = { workspace = true }
bytesize = "1.2.0"
cid = { workspace = true }
libipld = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
tempdir = "0.3.7"
server-config = { workspace = true }
