[package]
name = "particle-modules"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-execution = { workspace = true }

particle-args = { workspace = true }
json-utils = { workspace = true }
fs-utils = { workspace = true }
service-modules = { workspace = true }
fluence-libp2p = { workspace = true }
marine-module-info-parser = { workspace = true }
marine-it-parser = { workspace = true }
fluence-app-service = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
eyre = { workspace = true }
fstrings = { workspace = true }
bytesize = "1.3.0"
libipld = { workspace = true }

[dev-dependencies]
tempdir = "0.3.7"
server-config = { workspace = true }
maplit = { workspace = true }