[package]
name = "particle-node"
version = "0.7.1"
authors = ["Fluence Labs"]
description = "Node implementing peer functionality in the Fluence p2p network"
edition = "2018"

[dependencies]
particle-protocol = { workspace = true }
particle-builtins = { workspace = true }
particle-execution = { workspace = true }
connection-pool = { workspace = true }
script-storage = { workspace = true }
aquamarine = { workspace = true }
sorcerer = { workspace = true }

fluence-libp2p = { workspace = true }
ctrlc-adapter = { workspace = true }
server-config = { workspace = true }
config-utils = { workspace = true }
kademlia = { workspace = true }
air-interpreter-fs = { workspace = true }
builtins-deployer = { workspace = true }
fs-utils = { workspace = true }
peer-metrics = { workspace = true }
spell-event-bus = { workspace = true }

fluence-keypair = { workspace = true }

avm-server = { workspace = true }
air-interpreter-wasm = { workspace = true }

libp2p = { workspace = true }
libp2p-metrics = { workspace = true }
libp2p-swarm = { workspace = true }
prometheus-client = { workspace = true }

futures = { workspace = true }
async-std = { workspace = true }
parking_lot = { workspace = true }

humantime-serde = "1.1.1"

log = { workspace = true }
env_logger = "0.9.1"
clap = "3.2.23"
tide = "0.17.0-beta.1"
itertools = "0.10.5"
eyre = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
log-utils = { workspace = true }
uuid-utils = { workspace = true }
test-utils = { workspace = true }
service-modules = { workspace = true }
particle-modules = { workspace = true }
particle-execution = { workspace = true }
particle-args = { workspace = true }
created-swarm = { workspace = true }
connected-client = { workspace = true }
test-constants = { workspace = true }
toy-vms = { workspace = true }
now-millis = { workspace = true }
local-vm = { workspace = true }
control-macro = { workspace = true }
json-utils = { workspace = true }
builtins = { workspace = true }
fluence-spell-dtos = { workspace = true }

fluence-app-service = { workspace = true }

parking_lot = { workspace = true }
maplit = { workspace = true }
serde_json = { workspace = true }
fstrings = { workspace = true }
serde = { workspace = true }
multihash = "0.16.3"
blake3 = "1.3.3"
criterion = { version = "0.4.0", features = ["async_std", "html_reports"] }
rand = "0.8.5"
bs58 = { workspace = true }

quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[bench]]
name = "network_api_bench"
harness = false

[[bench]]
name = "aquamarine_bench"
harness = false

