[package]
name = "particle-node"
version = "0.7.1"
authors = ["Fluence Labs"]
description = "Node implementing peer functionality in the Fluence p2p network"
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }
particle-builtins = { workspace = true }
particle-execution = { workspace = true }
connection-pool = { workspace = true }
script-storage = { workspace = true }
aquamarine = { workspace = true }
sorcerer = { workspace = true }

fluence-libp2p = { workspace = true }
ctrlc-adapter = { workspace = true }
server-config = { workspace = true }
config-utils = { workspace = true }
kademlia = { workspace = true }
air-interpreter-fs = { workspace = true }
builtins-deployer = { workspace = true }
fs-utils = { workspace = true }
peer-metrics = { workspace = true }
spell-event-bus = { workspace = true }

fluence-keypair = { workspace = true }

avm-server = { workspace = true }
air-interpreter-wasm = { workspace = true }

libp2p = { workspace = true }
libp2p-metrics = { workspace = true }
libp2p-swarm = { workspace = true }
prometheus-client = { workspace = true }

futures = { workspace = true }
async-std = { workspace = true }
parking_lot = { workspace = true }

humantime-serde = "1.1.1"

log = { workspace = true }
env_logger = "0.9.1"
clap = "3.2.23"
tide = "0.17.0-beta.1"
itertools = "0.10.5"
eyre = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "network_api_bench"
harness = false

[[bench]]
name = "aquamarine_bench"
harness = false

