[package]
name = "particle-node"
version = "0.8.0"
authors = ["Fluence Labs"]
description = "Node implementing peer functionality in the Fluence p2p network"
edition = "2021"

[dependencies]
particle-protocol = { workspace = true }
particle-builtins = { workspace = true }
particle-execution = { workspace = true }
connection-pool = { workspace = true }
script-storage = { workspace = true }
aquamarine = { workspace = true }
sorcerer = { workspace = true }


fluence-libp2p = { workspace = true }
ctrlc-adapter = { workspace = true }
server-config = { workspace = true }
config-utils = { workspace = true }
kademlia = { workspace = true }
air-interpreter-fs = { workspace = true }
builtins-deployer = { workspace = true }
fs-utils = { workspace = true }
peer-metrics = { workspace = true }
spell-event-bus = { workspace = true }
key-manager = { workspace = true }

fluence-keypair = { workspace = true }

avm-server = { workspace = true }
air-interpreter-wasm = { workspace = true }

libp2p = { workspace = true }
libp2p-metrics = { workspace = true }
libp2p-swarm = { workspace = true }
prometheus-client = { workspace = true }

futures = { workspace = true }
async-std = { workspace = true }
parking_lot = { workspace = true }

humantime-serde = { workspace = true }

log = { workspace = true }
env_logger = "0.10.0"
clap = "3.2.23"
tide = "0.17.0-beta.1"
itertools = { workspace = true }
eyre = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
maplit = { workspace = true }
serde_json = { workspace = true }
fstrings = { workspace = true }
serde = { workspace = true }
multihash = "0.16.3"
blake3 = "1.3.3"
rand = "0.8.5"
bs58 = { workspace = true }
connected-client = { path = "../crates/connected-client" }

[[bench]]
name = "network_api_bench"
harness = false

[[bench]]
name = "aquamarine_bench"
harness = false
