[package]
name = "particle-protocol"
version = "0.3.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
libp2p = { workspace = true }
fluence-libp2p = { workspace = true }
json-utils = { workspace = true }
now-millis = { workspace = true }

fluence-keypair = { workspace = true }

serde_json = { workspace = true }
futures = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_derive = "1.0.164"
humantime-serde = { workspace = true }
log = { workspace = true }
derivative = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand = "0.8.5"

