[package]
name = "particle-protocol"
version = "0.3.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
libp2p = { workspace = true }
fluence-libp2p = { workspace = true }
json-utils = { workspace = true }
now-millis = { workspace = true }
fluence-keypair = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_derive = "1.0.193"
humantime-serde = { workspace = true }
log = { workspace = true }
derivative = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
asynchronous-codec = { version = "0.7.0" }
unsigned-varint = { version = "0.8.0", features = ["codec", "asynchronous_codec"] }
tracing = { workspace = true }
air-interpreter-sede = { version = "0.1.0", features = ["msgpack"] }
serde_bytes = "0.11.14"

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

