[package]
name = "particle-providers"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
host-closure = { path = "../crates/host-closure" }
control-macro = { path = "../crates/control-macro" }
json-utils = { path = "../crates/json-utils" }
fluence-libp2p = { path = "../crates/libp2p" }

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
