[package]
name = "particle-server"
version = "0.0.1"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
particle-protocol = { path = "../particle-protocol"}
particle-behaviour = { path = "../particle-behaviour"}

config-utils = { path = "../crates/config-utils" }
trust-graph = { path = "../trust-graph" }
fluence-libp2p = { path = "../crates/libp2p" }
ctrlc-adapter = { path = "../crates/ctrlc-adapter"}

libp2p = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "master" }
multihash ="0.11.4"
futures = "0.3.5"
futures-util = "0.3.5"
async-std = { version = "1.6.5", features = ["unstable"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
failure = "0.1.6"
base64 = "0.13.0"
log = "0.4.11"
env_logger = "0.7.1"
clap = "2.33.0"
void = "1.0.2"
prometheus = "0.9.0"
toml = "0.5.6"
anyhow = "1.0.31"
rand = "0.7.3"
tide = "0.13.0"
bs58 = "0.3.1"
itertools = "0.9.0"
num_cpus = "1.13.0"

[dev-dependencies]
particle-providers = { path = "../particle-providers"}
test-utils = { path = "../crates/test-utils" }
json-utils = { path = "../crates/json-utils" }
fluence-app-service = { git = "https://github.com/fluencelabs/fce", branch = "persist_particles" }
fluence-libp2p = { path = "../crates/libp2p" }
base64 = "0.13.0"
