[package]
name = "particle-services"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-modules = { workspace = true }
particle-protocol = { workspace = true }

fs-utils = { workspace = true }
service-modules = { workspace = true }
json-utils = { workspace = true }
particle-args = { workspace = true }
server-config = { workspace = true }
fluence-libp2p = { workspace = true }
particle-execution = { workspace = true }
peer-metrics = { workspace = true }
uuid-utils = { workspace = true }
now-millis = { workspace = true }
workers = { workspace = true }

fluence-app-service = { workspace = true }

parking_lot = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
toml = "0.5.10"
thiserror = { workspace = true }
derivative = { workspace = true }
eyre = { workspace = true }
humantime-serde = { workspace = true }
health = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempdir = "0.3.7"
libp2p-identity = { workspace = true }
base64 = { workspace = true }
config-utils = { workspace = true }
fluence-keypair = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
