[package]
name = "particle-services"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-modules = { workspace = true }
particle-protocol = { workspace = true }
types = { workspace = true }

fs-utils = { workspace = true }
service-modules = { workspace = true }
json-utils = { workspace = true }
particle-args = { workspace = true }
fluence-libp2p = { workspace = true }
particle-execution = { workspace = true }
peer-metrics = { workspace = true }
uuid-utils = { workspace = true }
now-millis = { workspace = true }
workers = { workspace = true }
futures = { workspace = true }
bytesize = { workspace = true }
cid-utils = { workspace = true }
libp2p-identity = { workspace = true }
config-utils = { workspace = true }

fluence-app-service = { workspace = true }

parking_lot = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
derivative = { workspace = true }
eyre = { workspace = true }
humantime-serde = { workspace = true }
health = { workspace = true }   
tokio = { workspace = true, features = ["fs", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-stream = { workspace = true, features = ["fs", "time"] }

[dev-dependencies]
tempdir = "0.3.7"
libp2p-identity = { workspace = true }
base64 = { workspace = true }
config-utils = { workspace = true }
fluence-keypair = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tempfile = { workspace = true }
core-distributor = { workspace = true, features = ["dummy"] }
cpu-utils = { workspace = true }
test-utils = { workspace = true }
