[package]
name = "script-storage"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
connection-pool = { path = "../connection-pool"}
particle-protocol = { path = "../particle-protocol"}
fluence-libp2p = { path = "../crates/libp2p" }
async-unlock = { path = "../crates/async-unlock" }
now-millis = { path = "../crates/now-millis" }
uuid-utils = { path = "../crates/uuid-utils" }

async-std = "1.9.0"
futures = "0.3.13"
thiserror = "1.0.23"
chrono = "0.4.19"
log = "0.4.11"
