[package]
name = "script-storage"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
connection-pool = { path = "../connection-pool"}
particle-protocol = { path = "../particle-protocol"}
fluence-libp2p = { path = "../crates/libp2p" }
async-unlock = { path = "../crates/async-unlock" }
now-millis = { path = "../crates/now-millis" }

async-std = { workspace = true }
futures = "0.3.24"
thiserror = "1.0.37"
uuid = "1.1.2"
chrono = "0.4.22"
log = "0.4.17"
