[package]
name = "script-storage"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
connection-pool = { workspace = true }
particle-protocol = { workspace = true }
fluence-libp2p = { workspace = true }
async-unlock = { workspace = true }
now-millis = { workspace = true }

async-std = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
uuid = "1.3.0"
chrono = "0.4.23"
log = { workspace = true }
