[package]
name = "fluence-server"
version = "0.0.5"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
trust-graph = { path = "../trust-graph" }
fluence-libp2p = { path = "../crates/libp2p" }
ctrlc-adapter = { path = "../crates/ctrlc-adapter"}
faas-api = { path = "../faas-api" }
fluence-ipfs = { path = "../client/fluence-ipfs" }
libp2p = "0.18.1"
parity-multiaddr = "0.8.0"
multihash ="0.10.0"
futures = "0.3.4"
futures-util = "0.3.4"
async-std = "1.5.0"
config = "0.10.1"
itertools = "0.9.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
serde_with = { version = "1.4.0", features = ["json"] }
bs58 = "0.3.0"
failure = "0.1.6"
base64 = "0.11.0"
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.0"
void = "1.0.2"
smallvec = "1.3.0"
prost = "0.6.1"
once_cell = "1.3.1"
uuid = { version = "0.8.1", features = ["v4"] }
url = "2.1.1"

[dev-dependencies]
rand = "0.7.3"
quickcheck = "0.9.2"
unsigned-varint = "0.3.3"
fluence-client = { path = "../client/rust-libp2p" }