[package]
name = "fluence-server"
version = "0.0.5"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
trust-graph = { path = "../trust-graph" }
fluence-libp2p = { path = "../crates/libp2p" }
ctrlc-adapter = { path = "../crates/ctrlc-adapter"}
control-macro = { path = "../crates/control-macro"}
faas-api = { path = "../faas-api" }
fluence-app-service = { git = "https://github.com/fluencelabs/fce" }
libp2p = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "master" }
parity-multiaddr = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "master" }
multihash ="0.11.0"
futures = "0.3.4"
futures-util = "0.3.4"
async-std = { version = "1.6.2", features = ["unstable"] }
itertools = "0.9.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
bs58 = "0.3.0"
failure = "0.1.6"
base64 = "0.11.0"
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.0"
void = "1.0.2"
smallvec = "1.3.0"
prost = "0.6.1"
once_cell = "1.4.0"
uuid = { version = "0.8.1", features = ["v4"] }
url = "2.1.1"
tide = "0.8.1"
prometheus = "0.9.0"
http-types = "1.2.0"
toml = "0.5.6"
anyhow = "1.0.31"
rand = "0.7.3"

[dev-dependencies]
rand = "0.7.3"
quickcheck = "0.9.2"
unsigned-varint = "0.3.3"
fluence-client = { path = "../client/rust-libp2p" }
