[package]
name = "sorcerer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquamarine = { workspace = true }
spell-storage = { workspace = true }
particle-builtins = { workspace = true }
particle-services = { workspace = true }
particle-modules = { workspace = true }
particle-execution = { workspace = true }
particle-protocol = { workspace = true }
spell-event-bus = { workspace = true }
server-config = { workspace = true }
particle-args = { workspace = true }
uuid-utils = { workspace = true }
now-millis = { workspace = true }
connection-pool = { workspace = true }
kademlia = { workspace = true }
fluence-libp2p = { workspace = true }
key-manager = { workspace = true }

libp2p = { workspace = true }
fluence-keypair = { workspace = true }

serde_json = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
eyre = { workspace = true}
fstrings = { workspace = true}
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

fluence-spell-dtos = { workspace = true }
