[package]
name = "spell-storage"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
particle-services = { path = "../particle-services" }
particle-modules = { path = "../particle-modules" }
service-modules = { path = "../crates/service-modules" }

fluence-app-service = { workspace = true }
fluence-spell-distro = { workspace = true }

parking_lot = { workspace = true }
derivative = { workspace = true }
eyre = { workspace = true }
toml = { workspace = true }
log = { workspace = true }