[package]
name = "spell-storage"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2021"

[dependencies]
particle-services = { workspace = true }
particle-modules = { workspace = true }
service-modules = { workspace = true }

fluence-app-service = { workspace = true }
fluence-spell-distro = { workspace = true }
fluence-libp2p = { workspace = true }

parking_lot = { workspace = true }
derivative = { workspace = true }
eyre = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
