[package]
name = "trust-graph"
version = "0.0.1"
authors = ["Fluence Labs"]
edition = "2018"
description = "trust graph"
license = "Apache 2.0"

[dependencies]
libp2p-core = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "master" }
parity-multiaddr = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "master" }
serde = { version = "1.0.110", features = ["derive"] }
bs58 = "0.3.0"
failure = "0.1.6"
log = "0.4.8"
ref-cast = "1.0.1"
derivative = "2.1.1"
ed25519-dalek = "1.0.0-pre.3"

[dev-dependencies]
rand = "0.7.3"
